# google-fonts-sources

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: args.rs  config.rs  error.rs  font_source.rs  lib.rs  main.rs  metadata.rs  repo_info.rs
testdata/multi_family_repo/family1/sources/: config.yaml
testdata/multi_family_repo/family2/Sources/: config-this-too.yaml
testdata/source_dir_test/Sources/: README.md
