[package]
name = "google-fonts-sources"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
kdam = {version = "0.5.2", features = ["template"]}
rayon = "1.10.0"
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10.1"
ureq = "2.9.7"

