[package]
name = "google-fonts-sources"
version = "0.3.0"
edition = "2021"
description = "finding source repositories of Google Fonts fonts"
license = "MIT/Apache-2.0"
repository = "https://github.com/googlefonts/google-fonts-sources"
readme = "README.md"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
kdam = {version = "0.5.2", features = ["template"]}
rayon = "1.10.0"
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10.1"
ureq = "2.9.7"
font-types = { version = "0.7", features= ["serde"] }
thiserror = "1.0.37"
serde_yaml = "0.9.14"
log = "0.4"
env_logger = "0.11"
