[package]
name = "google-fonts-sources"
version = "0.10.0"
edition = "2021"
description = "finding source repositories of Google Fonts fonts"
license = "MIT/Apache-2.0"
repository = "https://github.com/googlefonts/google-fonts-sources"
readme = "README.md"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
rayon = "1.10.0"
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10.1"
ureq = "3.0.0"
font-types = { version = "0.9", features= ["serde"] }
thiserror = "2.0"
serde_yaml = "0.9.14"
log = "0.4"
env_logger = "0.11"
